--- a/css/styles.css
+++ b/css/styles.css
@@ -31,3 +31,16 @@
     color: #0f0f0f;
 
 }
+/* We would like to have the navigation bar displayed in darker purple color, 
+instead of the current color. In addition, when we use the fixed navigation bar, 
+we should give the body of the page an upper margin of 50px, 
+so that the top 50px of the page does not get hidden under the navigation bar.
+We accomplish these by adding these CSS customisations to the styles.css file */
+body{
+    padding:50px 0px 0px 0px;
+    z-index:0;
+}
+
+.navbar-dark {
+     background-color: #512DA8;
+}
