--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
 }
 
 .footer {
-    background-color: #d1c4e9;
+    background-color: #e3e9c5;
     margin: 0px auto;
     padding: 20px 0px 20px 0px;
 }
@@ -21,7 +21,7 @@
 .jumbotron {
     padding: 70px 30px 70px 30px;
     margin: 0px auto;
-    background: #9575cd;
+    background: #50b0e7;
     color: floralwhite;
 }
 
