--- a/css/styles.css
+++ b/css/styles.css
@@ -1,46 +1,98 @@
 /* We are adding CSS classes to style the HTML web page */
+
 .row-header {
+
     margin: 0px auto;
+
     padding: 0px auto;
+
 }
+
+
 
 .row-content {
+
     margin: 0px auto;
+
     padding: 50px 0px 50px 0px;
+
     border-bottom: 1px ridge;
+
     min-height: 400px;
+
 }
+
+
 
 .footer {
-    background-color: #e3e9c5;
+
+    background-color: #d1c4e9;
+
     margin: 0px auto;
+
     padding: 20px 0px 20px 0px;
+
 }
+
+
 
 /* jubotron is a predetermined CLASS thru BS with its own styling, however we were able to had additional CSS to the class */
+
 .jumbotron {
+
     padding: 70px 30px 70px 30px;
+
     margin: 0px auto;
-    background: #50b0e7;
+
+    background: #9575cd;
+
     color: floralwhite;
+
 }
+
+
 
 .address {
+
     font-size: 80%;
+
     margin: 0px;
+
     color: #0f0f0f;
 
-}
-/* We would like to have the navigation bar displayed in darker purple color, 
-instead of the current color. In addition, when we use the fixed navigation bar, 
-we should give the body of the page an upper margin of 50px, 
-so that the top 50px of the page does not get hidden under the navigation bar.
-We accomplish these by adding these CSS customisations to the styles.css file */
-body{
-    padding:50px 0px 0px 0px;
-    z-index:0;
+
+
 }
 
+/* We would like to have the navigation bar displayed in darker purple color, 
+
+instead of the current color. In addition, when we use the fixed navigation bar, 
+
+we should give the body of the page an upper margin of 50px, 
+
+so that the top 50px of the page does not get hidden under the navigation bar.
+
+We accomplish these by adding these CSS customisations to the styles.css file */
+
+body{
+
+    padding:50px 0px 0px 0px;
+
+    z-index:0;
+
+}
+
+
+
 .navbar-dark {
+
      background-color: #512DA8;
+
+}
+
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
 }
