--- a/css/styles.scss
+++ b/css/styles.scss
@@ -82,3 +82,20 @@ body{
     position: absolute;
     bottom: 0px;
 }
+
+.modal-dialog {
+    .modal-header{
+        background: $background-dark;
+        color: floralwhite;
+ 
+        .close{
+            color: floralwhite;
+        }
+    }
+    .modal-body{
+        background: $background-pale;
+    }
+    .modal-footer{
+        background: $background-light;
+    }
+ }
